--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "antd": "^4.6.6",
     "autoprefixer": "^10.0.1",
     "classnames": "^2.2.6",
     "gray-matter": "^4.0.2",
@@ -16,7 +17,9 @@
     "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-slick": "^0.27.11",
     "sass": "^1.26.11",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^1.8.10"
   }
 }
