--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "next": "9.5.3",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-select": "^3.1.0",
+    "reactstrap": "^8.6.0",
     "sass": "^1.26.11",
+    "select": "^1.1.2",
     "tailwindcss": "^1.8.10"
   }
 }
