--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "classnames": "^2.2.6",
     "gray-matter": "^4.0.2",
     "next": "9.5.3",
+    "otp-input-react": "^0.2.4",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-select": "^3.1.0",
-    "reactstrap": "^8.6.0",
     "react-slick": "^0.27.11",
+    "reactstrap": "^8.6.0",
     "sass": "^1.26.11",
     "select": "^1.1.2",
     "slick-carousel": "^1.8.1",
